打开指定的WebView

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -59,6 +59,10 @@ xhr.open('GET', url, true);
 xhr.send();
 })();
 
+window["onWebViewPostMessage"] = function(fromWebView, message) {
+    alert(message);
+}
+
     </script>
 </head>
 <body onselectstart="return false"
